--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,14 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-*{ 
-    font-family: 'Poppins', sans-serif;
+* {
+  font-family: "Poppins", sans-serif;
 }
 
+.banner-hero {
+  background-image: url(images/banner-hero.png);
+  background-position: center 25%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
-.banner-hero{ 
-    background-image: url(images/banner-hero.png);
-    background-position: center 25% ;
-    background-repeat: no-repeat;
-    background-size: cover;
+.input::placeholder {
+  color: white;
 }
