feat: shoeView component logic

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -7,7 +7,7 @@
 }
 
 .banner-hero {
-  background-image: url(images/banner-hero.png);
+  background-image: url(/images/banner-hero.png);
   background-position: center 25%;
   background-repeat: no-repeat;
   background-size: cover;
